<resources>
    <string name="app_name">GRM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_in">Time In</string>
    <string name="check_out">Time Out</string>
    <string name="pref_gps_updates">GPS Updates (seconds)</string>
    <string name="pref_gps_updates_summary">Update GPS position approximately every… (5 seconds minimum)</string>
    <string name="pref_gps_updates_too_low">Sorry, this value is too low.</string>
    <string name="pref_gps_updates_too_high">Sorry, this value is greater than max run time.</string>
    <string name="pref_gps_updates_battery_drain">Watch out! Values below 30s can drain your battery.</string>
    <string name="invalid_number">Invalid number</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_alarm">Alarm</string>

    <string name="waiting_for_gps_data">Waiting for GPS data</string>
    <string name="last_location_sent_at">Last location sent at</string>

    <string name="toast_service_running">Tracker is on</string>
    <string name="toast_service_stopped">Tracker is off</string>

    <string name="toast_prefs_restart">Don\'t forget to restart tracking!</string>

    <!-- Menu strings -->
    <!-- Label for "settings" menu item. -->
    <string name="Settings">Settings</string>

    <!--Preference-->
    <string name="pref_max_run_time">Max run time (hours)</string>
    <string name="pref_max_run_time_summary">(defaults to 8 hours)</string>
    <string name="pref_max_run_time_too_low">Sorry, this value is lower than GPS updates.</string>
    <string name="pref_timestamp">Timestamp on each request</string>
    <string name="pref_timestamp_summary">Add t=(milliseconds) to the parameters</string>
    <string name="pref_gps_awake">Keep GPS awake</string>
    <string name="pref_gps_awake_explain">More accurate but uses more power</string>
    <string name="pref_stop_location_service">Stop Service</string>
    <string name="pref_stop_location_service_explain">Click to stop location service</string>

    <!-- Preference keys -->
    <string name="preference_which_timing_to_use_key">which_timing</string>
    <string name="preference_which_api_to_use_key">which_api</string>
    <string name="preference_gps_updates_key">gps_update</string>
    <string name="preference_max_run_time_key">max_run_time</string>
    <string name="preference_timestamp_key">timestamp</string>
    <string name="preference_accuracy">accuracy</string>
    <string name="preference_stop_location_service">stop_location_service</string>

</resources>
